[gd_scene load_steps=62 format=2]

[ext_resource path="res://Player/Mini.gd" type="Script" id=1]
[ext_resource path="res://assets/art/player/character/idle_4.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Weapons/FlowerGun.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/sfx/mayragandra.itch.io/Grass Running.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/sfx/land.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/shaders/light_shader_sprite.png" type="Texture" id=7]
[ext_resource path="res://assets/art/player/character/jump_down_3.png" type="Texture" id=8]
[ext_resource path="res://assets/art/player/character/jump_up_3.png" type="Texture" id=9]
[ext_resource path="res://assets/art/player/character/run_6.png" type="Texture" id=10]
[ext_resource path="res://assets/art/player/character/death_8.png" type="Texture" id=11]
[ext_resource path="res://assets/audio/sfx/death.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/sfx/spawn.wav" type="AudioStream" id=13]
[ext_resource path="res://Player/EllieActionRange.gd" type="Script" id=14]

[sub_resource type="CapsuleShape2D" id=21]
radius = 6.0
height = 2.0

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 11 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 11 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 10 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 10 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=53]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": false,
"name": "jump_down",
"speed": 1.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "jump_up",
"speed": 1.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="Animation" id=59]
resource_name = "dying"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.439857 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.357423, 0.403038 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -4, -10 ), Vector2( -7, -14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.457063 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("SoundDeath")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.00203945 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "falling"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_weapon"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
step = 0.25

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 5 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=1]
resource_name = "run"
length = 1.8
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 2.46229, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="CapsuleShape2D" id=22]

[sub_resource type="Animation" id=23]
resource_name = "jump"
length = 0.2
step = 0.05

[sub_resource type="Animation" id=24]
resource_name = "land"
length = 0.2
step = 0.05

[sub_resource type="Curve" id=54]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=55]
curve = SubResource( 54 )

[sub_resource type="ParticlesMaterial" id=25]
lifetime_randomness = 1.0
trail_size_modifier = SubResource( 55 )
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 127.11
flatness = 0.15
gravity = Vector3( -10, -20, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="Gradient" id=57]
offsets = PoolRealArray( 0, 0.769643 )
colors = PoolColorArray( 0.657107, 0.748802, 0.888428, 1, 0.447059, 0.619608, 0.878431, 0.666667 )

[sub_resource type="GradientTexture" id=58]
gradient = SubResource( 57 )

[sub_resource type="ParticlesMaterial" id=56]
lifetime_randomness = 1.0
trail_size_modifier = SubResource( 55 )
emission_shape = 5
emission_ring_radius = 8.0
emission_ring_inner_radius = 2.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
flatness = 0.15
gravity = Vector3( -620, -20, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 1.0
color = Color( 0.870588, 0.921569, 1, 1 )
color_ramp = SubResource( 58 )

[sub_resource type="CircleShape2D" id=28]
radius = 1.0

[sub_resource type="CircleShape2D" id=60]
radius = 65.0

[node name="Hero" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 21 )

[node name="HazardCollisionShape" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HazardCollisionShape"]
position = Vector2( 4, -14 )
polygon = PoolVector2Array( -1, 13, 0, 0, -7, 0, -10, 12 )

[node name="ShootAnimation" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 53 )
animation = "idle"
frame = 3
playing = true

[node name="FlowerGun" parent="AnimatedSprite" instance=ExtResource( 4 )]
position = Vector2( 7, 2 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="WallGrabForwardDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 7, 0 )

[node name="WallGrabDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 0, 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/dying = SubResource( 59 )
anims/falling = SubResource( 2 )
anims/falling_weapon = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/idle_weapon = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/jumping_weapon = SubResource( 7 )
anims/run = SubResource( 1 )
anims/run_weapon = SubResource( 9 )
anims/standing_weapon_ready = SubResource( 10 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0

[node name="Land" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0

[node name="Footstep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0

[node name="FootstepTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="EllieFloatRange" type="Area2D" parent="."]
position = Vector2( 0, 8 )
collision_layer = 0
collision_mask = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EllieFloatRange"]
position = Vector2( 0, -28 )
rotation = 1.5708
shape = SubResource( 22 )

[node name="PointBehindMini" type="Position2D" parent="EllieFloatRange"]
position = Vector2( -13, -29 )

[node name="JuiceAnimationPlayer" type="AnimationPlayer" parent="."]
anims/jump = SubResource( 23 )
anims/land = SubResource( 24 )

[node name="Dust" type="Particles2D" parent="."]
position = Vector2( 0, -1 )
amount = 20
lifetime = 0.3
speed_scale = 0.8
explosiveness = 0.66
randomness = 0.11
visibility_rect = Rect2( 0, 0, 0, 0 )
local_coords = false
process_material = SubResource( 25 )

[node name="BubbleDashParticles" type="Particles2D" parent="."]
position = Vector2( 0, -7 )
emitting = false
amount = 30
lifetime = 0.6
explosiveness = 0.28
randomness = 0.11
visibility_rect = Rect2( 0, 0, 0, 0 )
local_coords = false
process_material = SubResource( 56 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -11 )
texture = ExtResource( 7 )
energy = 0.35
range_layer_min = -1
shadow_enabled = true
shadow_gradient_length = 3.0

[node name="LevelBoundaryTrigger" type="Area2D" parent="."]
position = Vector2( -4, -3 )
collision_layer = 1024
collision_mask = 0
input_pickable = false
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBoundaryTrigger"]
scale = Vector2( 2, 2 )
shape = SubResource( 28 )

[node name="FeetPosition" type="Position2D" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="ScaleTween" type="Tween" parent="."]

[node name="SoundDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -12.0

[node name="SoundSpawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -12.0

[node name="EllieActionRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EllieActionRange"]
shape = SubResource( 60 )
