[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Mini.gd" type="Script" id=1]
[ext_resource path="res://Player/mini_walking_spritesheet1.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Weapons/FlowerGun.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=2]
resource_name = "falling"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_weapon"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.0065557, 1.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=1]
resource_name = "run"
length = 1.8
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 2.46229, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="CapsuleShape2D" id=21]
radius = 6.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=22]

[node name="Mini" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="ShootAnimation" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 8

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 2 )
hframes = 8
frame = 1

[node name="FlowerGun" parent="Sprite" instance=ExtResource( 4 )]
position = Vector2( 7, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.6
anims/falling = SubResource( 2 )
anims/falling_weapon = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/idle_weapon = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/jumping_weapon = SubResource( 7 )
anims/run = SubResource( 1 )
anims/run_weapon = SubResource( 9 )
anims/standing_weapon_ready = SubResource( 10 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -28 )
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 21 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="EllieFloatRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EllieFloatRange"]
position = Vector2( 0, -28 )
rotation = 1.5708
shape = SubResource( 22 )

[node name="PointBehindMini" type="Position2D" parent="EllieFloatRange"]
position = Vector2( -13, -29 )

[connection signal="body_entered" from="EllieFloatRange" to="." method="_on_EllieFloatRange_body_entered"]
[connection signal="body_exited" from="EllieFloatRange" to="." method="_on_EllieFloatRange_body_exited"]
